--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,9 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_placementdashboard">Placement Dashboard</string>
+    <string name="menu_viewtpos">View TPOs</string>
+    <string name="menu_viewstudents">View Students</string>
+    <string name="menu_addtpo">Add TPO</string>
+    <string name="menu_addstudent">Add Student</string>
 </resources>
