--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Hi, User</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_view_profile">View Profile</string>
 
     <string name="menu_placementdashboard">Placement Dashboard</string>
     <string name="menu_viewtpos">View TPOs</string>
