Almost Completed with the APP

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,4 +117,7 @@
     </string>
     <string name="channel_name">Download</string>
     <string name="channel_description">Download in Progress</string>
+    <string name="title_activity_placement_dashboard">PlacementDashboardActivity</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
 </resources>
